# word-datasets

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
js-lib/: README.md  package-lock.json  package.json  tsconfig.json
js-lib/scripts/: copy-data.mjs
js-lib/src/: browser.ts  index.ts
python-lib/: .gitignore  MANIFEST.in  README.md  pyproject.toml
python-lib/src/word_datasets/: __init__.py
python-lib/src/yourlib/: __init__.py
python-lib/tools/: prepare_data.py
scripts/: copy_data_to_packages.sh
scripts_py/: process_data.py
